@@ -1,7 +1,7 @@
 <html>
 <!-- $Id$ -->
 <head>
-<title>Tapestry</title>
+<title>Tapestry Release 0.2.6</title>
 <body>
 
 <A href="http://sourceforge.net/project/?group_id=4754"> 
@@ -10,17 +10,20 @@ align=right valign=top
 width="88" height="31" border="0" alt="SourceForge Logo">
 </a>
 
-<h1>Tapestry: Contents</h1>
+<h1>Tapestry Release 0.2.6</h1>
 
 <h2>Getting Started</h2>
 
-<p>Tapesty is now distributed with pre-compiled Jars for the main framework (Tapestry.jar)
-as well as the tutorials and examples.  These files are in the lib directory.
+<p>Tapestry is now distributed as a pre-compiled JAR file and includes pre-generated
+<a href="javadoc/Tapestry/overview-summary.html">Javadoc</a>.
 
-<p>However, Tapestry requires additional files to compile or deploy .. fortunately, all
-of these are open source or freely available.  In order to build Tapestry or to build and run the tutorials
-and example code, you will need to get distributions for the following
-packages, and copy the necessary Jar files to the lib directory.
+<p>Also included with the distribution are a number of additional JAR files that are also
+released under open-source licenses.  The end result is that, after installing the
+<a href="JBE/Manual.pdf">Java Build Environment</a>
+you can have the tutorials up and running in seconds!
+
+<p>This product includes software developed by the Apache Software Foundation (
+<a href="http://www.apache.org/">http://www.apache.org/</a>).
 
 <p>
 
@@ -29,36 +32,32 @@ packages, and copy the necessary Jar files to the lib directory.
 <tr bgcolor=black>
 	<th> <font color=white>JAR file</font></th>
 	<th> <font color=white>Description</font><</th>
+	<th> <font color=white>Version</font></th>
+	<th> <font color=white>License</font></th>
 	<th> <font color=white>Location</font><</th>
 </tr>
 
-<tr>
-
-	<td>j2ee.jar</td>
-
-	<td>Sun's reference implementation of
-	the J2EE libraries.</td>
-
-	<td>
-	<a href="http://java.sun.com/j2ee/download.html">
-		http://java.sun.com/j2ee/download.html</a>
-	</td>
-
-</tr>
 
 
-<tr bgcolor=silver>
+<tr valign=top>
 	<td>gnu-regexp.jar</td>
-	<td>GNU regular expression compiler framework.</td>
+	<td>GNU regular expression compiler
+	<p>Used by Tapestry to parse HTML templates</td>
+	<td>1.0.8</td>
+	<td><a href="http://www.gnu.org/copyleft/gpl.html">GNU Public License</a></td>
 	<td><a href="ftp://tapestry.sourceforge.net/pub/tapestry/gnu-regexp-0.1.8.zip">
 		ftp://tapestry.sourceforge.net/pub/tapestry/gnu-regexp-0.1.8.zip</a>
 	</td>
 </tr>
 
-<tr>
+<tr valign=top bgcolor=silver>
 	<td>xerces.jar</td>
-	<td>Xerces XML Parser from <a href="http://xml.apache.org">Apache</a>
+	<td>Xerces XML Parser
+	<p>Used by Tapestry to parse application and 
+	component specifications
 	</td>
+	<td>1.0.3</td>
+	<td><a href="LICENSE.xerces.txt">Apache Software License, Version 1.1</a></td>
 	<td>
 	<a href="ftp://tapestry.sourceforge.net/pub/tapestry/Xerces-J-bin.1.0.3.zip">
 		ftp://tapestry.sourceforge.net/pub/tapestry/Xerces-J-bin.1.0.3.zip</a>
@@ -69,15 +68,13 @@ packages, and copy the necessary Jar files to the lib directory.
 	</td>
 </tr>
 
-<tr bgcolor=silver>
-	<td>javax.servlet.jar
-		<br>com.mortbay.jetty.jar
-		<br>com.sun.net.ssl.jar
-		<br>org.apache.jasper.jar
+<tr valign=top>
+	<td>com.mortbay.jetty.jar
 	</td>
-	<td>Jetty 3 framework (Jetty is an
-	open source servlet container)
+	<td>Jetty HTTP Servlet Server
 	</td>
+	<td>3.0.0_rc5</td>
+	<td><a href="LICENSE.Jetty.html">Jetty License</a>
 	<td>
 		<a href="http://sourceforge.net/projects/jetty">
 			http://sourceforge.net/projects/jetty
@@ -85,6 +82,25 @@ packages, and copy the necessary Jar files to the lib directory.
 	</td>
 </tr>
 
+<tr valign=top bgcolor=silver>
+	<td>javax.servlet.jar</td>
+	<td>Servlet API 2.2 reference implementation</td>
+	<td>&nbsp;</td>
+	<td><a href="LICENSE.javax.servlet.txt">Apache Software License, Version 1.1</a>
+	<td>Distributed with Jetty</td>
+</tr>
+
+<tr valign=top>
+	<td>org.apache.jasper.jar</td>
+	<td>Jasper JSP Engine</td>
+	<td>&nbsp;</td>
+	<td><a href="LICENSE.javax.servlet.txt">Apache Software License, Version 1.1</a>
+	<td>Distributed with Jetty</td>
+</tr>
+
+<tr bgcolor=black>
+<td colspan=5><img src="images/shim.gif"></td>
+</tr>
 </table>
 
 <h2>Documentation</h2>
@@ -94,11 +110,14 @@ packages, and copy the necessary Jar files to the lib directory.
 <ul>
 	<li><a href="Examples/Tutorial/Tapestry-Tutorial.pdf">Tapestry Tutorial</a> (PDF) 
 		-- A good introduction to what Tapestry is and how to use it.
+	<li><a href="Examples/Vlib/Virtual-Library.pdf">Primix Virtual Library Guide</a> (PDF)
+		-- Describes how to setup and run the Virtual Library demonstration, a complete
+		J2EE application implemented using Tapestry.
 	<li><a href="javadoc/Tapestry/overview-summary.html">Tapestry API</a> (Javadoc)
 	<li><a href="Examples/Readme.html">Tapestry  Examples</a> (HTML) -- guide to Tapestry
 		example and tutorial code
 	<li><a href="Tapestry/Tapestry-Whitepaper.pdf">Tapestry Whitepaper</a> (PDF) --
-		show overview of Tapestry
+		An executive summary of Tapestry
 	<li><a href="Tapestry/Tapestry.pdf">Tapestry Developer's Guide</a> (PDF) -- main reference for
 		designing and developing Tapestry applications
 	<li><a href="JBE/Manual.pdf">Java Build Environment</a> (PDF) -- guide to setting up
@@ -106,7 +125,7 @@ packages, and copy the necessary Jar files to the lib directory.
 </ul>
 
 <p>Tapestry is an open source project, hosted on the <a href="http://sourceforge.net/project/?group_id=4754">SourceForge</a> and licensed
-under the <a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a>.
+under the <a href="License.html">GNU Lesser General Public License</a>.
 
 </body>
 </html>
