@@ -1,3 +1,7 @@
+* Nov 17 2000 hship
+
+Redistribute JARs from other projects, and include licenses.
+
 * Nov 6 2000 hship
 
 Begin organizing things to support the distributed release.
